--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 
 <body>
     <Main>
-        <h1>Hello I Am <span>Hariom Vishwakarma</span> </h1>
-        <p>Please Check My All Social Media Links</p>
+        <h1>Hello I Am <span>Abhishek Paraskar</span> </h1>
+        <p>Please follow Me And like subscribe </p>
         <div class="Main Container">
             <div class="all-social-container">
                 <div class="social-container">
