--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 <body>
     <Main>
-        <h1>Hello I Am <span>Gourav chaman</span> </h1>
+        <h1>Hello I Am <span>Hitesh chaman</span> </h1>
         <p>Please follow Me And like subscribe </p>
         <div class="Main Container">
             <div class="all-social-container">
