--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <body>
     <Main>
         <h1>Hello I Am <span>Hitesh chaman</span> </h1>
-        <p>Please follow Me And like subscribe </p>
+        <p>Please follow Me And like subscribe and press bellicon</p>
         <div class="Main Container">
             <div class="all-social-container">
                 <div class="social-container">
