--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 <body>
     <Main>
-        <h1>Hello  <span>मैं Anikesh हूं</span> </h1>
+        <h1>Hello  <span>मैं gourav हूं</span> </h1>
         <p>Please follow Me And like subscribe and press bellicon</p>
         <div class="Main Container">
             <div class="all-social-container">
